CIRC-1769 Replace Collectors#toList with Stream#toList